@@ -29,7 +29,6 @@ class Collidable < Behavior
     @actor.stage.register_collidable @actor
   end
 
-
   def bounding_box
     [ @actor.x-@width,@actor.y-@width,
       @actor.x+@width,@actor.y+@width ]
@@ -38,6 +37,5 @@ class Collidable < Behavior
   def bounding_circle
     [ @actor.x+@radius, @actor.y+@radius, @radius]
   end
-
 
 end
