@@ -1,2 +1,0 @@
-require 'rubygame/ftor'
-Ftor = Rubygame::Ftor
