@@ -1,0 +1,11 @@
+require File.join(File.dirname(__FILE__),'helper')
+require 'behavior'
+
+describe 'A new behavior' do
+
+  it 'should auto-require behaviors that it depends on' do
+    actor = mock()
+
+  end
+
+end
