@@ -1,0 +1,11 @@
+require 'helper'
+require 'label'
+
+describe 'a new Label' do
+  before do 
+#    opts = {:stage=>"stage", :input=>"input", :resources=>"resource"}
+#    @test_me = Label.new opts
+  end
+
+  it 'should do something'
+end
